--- a/templates/task/add.html.twig
+++ b/templates/task/add.html.twig
@@ -14,12 +14,22 @@
 {% endblock %}
 {% block body %}
 
-    <div class="container">
+    <div class="container p-1">
+        <div class="container mt-1">
+            <div class="row">
+                <div class="col-sm-4">
+                    <p>Username: {{ app.user.username }}</p>
+                </div>
+                <div class="col-sm-4 ">
+                    <a class="float-end" href="{{ path('app_logout') }}">LogOut</a>
+                </div>
 
+            </div>
+        </div>
         <div class="card card-default" style="margin-top: 25px">
             <div class="card-header">
-                <span>Task List</span>
-                <a class="float-end" href="{{ path('app_task_add') }}"> Add </a>
+                <span>Add/Edit Task</span>
+                <a class="float-end" href="{{ path('app_task_add') }}">Add</a>
             </div>
             <div class="card-body">
                 {{ form_start(form) }}
