--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -21,7 +21,7 @@
                     <p>Username: {{ app.user.username }}</p>
                 </div>
                 <div class="col-sm-4 ">
-                  <a class="float-end" href="{{ path('app_logout') }}">LogOut</a>
+                    <a class="float-end" href="{{ path('app_logout') }}">LogOut</a>
                 </div>
 
             </div>
@@ -37,34 +37,28 @@
             </div>
         {% endfor %}
 
-        {#{% for message in app.flashes('error') %}#}
-        {#<div class="alert alert-e" role="alert">#}
-        {#{{ message }}#}
-        {#</div>#}
-        {#{% endfor %}#}
         <div class="card card-default">
             <div class="card-header">
-
                 <span>Task List</span>
                 <a class="float-end" href="{{ path('app_task_add') }}"> Add </a>
             </div>
             <div class="card-body">
-                {#<div class="row g-0" style="margin-bottom: 10px">#}
-                {#<div class="col-md-2" style="text-align: center">#}
-                {#Status#}
-                {#</div>#}
-                {#<div class="col-md-4">#}
-                {#<select class="form-select" aria-label="Default select example">#}
-                {#<option selected>Open this select menu</option>#}
-                {#<option value="1">One</option>#}
-                {#<option value="2">Two</option>#}
-                {#<option value="3">Three</option>#}
-                {#</select>#}
-                {#</div>#}
-                {#</div>#}
-
+                <form method="get" action="{{ path('app_task') }}" class="mb-4">
+                    <div class="row">
+                        <div class="col-md-8 d-flex align-items-center">
+                            <label for="current_status" class="form-label" style="width: 150px;">Filter by Status:</label>
+                            <select name="current_status" id="current_status" class="form-select" style="width: auto;" onchange="this.form.submit()">
+                                <option value="">All</option>
+                                {% for status in allStatus %}
+                                    <option value="{{ status }}" {% if currentStatus == status %}selected{% endif %}>
+                                        {{ status |e }}
+                                    </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                </form>
                 <div id="presidents">Loading...</div>
-                <!-- Insert this at the end of your body element, but before the closing tag -->
                 <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
                 <script>
                     $(function () {
@@ -77,21 +71,25 @@
                     });
 
                     $("body").on("click", ".delete-task-link", function (e) {
-                        var dataId = $(this).attr("data-id");
-                        if (dataId) {
-                            $.ajax({
-                                url: '/task/delete',
-                                method: 'POST',
-                                data: {id: dataId},
-                                success: function (data) {
-                                    alert(data.message);
-                                    window.location.reload();
-                                },
-                                error: function () {
-                                    alert('There are some issue while processing.Please try again.');
-                                }
-                            })
+                        if(confirm("Are you sure you want to delete this item?"))
+                        {
+                            var dataId = $(this).attr("data-id");
+                            if (dataId) {
+                                $.ajax({
+                                    url: '/task/delete',
+                                    method: 'POST',
+                                    data: {id: dataId},
+                                    success: function (data) {
+                                        alert(data.message);
+                                        window.location.reload();
+                                    },
+                                    error: function () {
+                                        alert('There are some issue while processing.Please try again.');
+                                    }
+                                })
+                            }
                         }
+
                     });
                 </script>
             </div>
